DE134699: Removing the base-href and adding context root to work with apache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ logging.level.org.springframework=INFO
 spring.profiles.active=production
 
 server.port=${PORT:5000}
+server.contextPath=/
 
 #Application specific properties & configs
 gateway.merchant.id=${GATEWAY_MERCHANT_ID:}
